# workstatus

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  events.rs  gh.rs  main.rs  model.rs  refresh.rs
src/ui/: detail.rs  list.rs  mod.rs
tests/fixtures/: pr_list.json  pr_view.json
